add swagger comment in login controller #28
