# doc/swagger.json
@@ -9,6 +9,52 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/user/login": {
+            "post": {
+                "description": "Authentification d’un utilisateur",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Authentifier un utilisateur",
+                "parameters": [
+                    {
+                        "description": "DTO d'authentification utilisateur",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.UserLoginDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Connexion réussie",
+                        "schema": {
+                            "$ref": "#/definitions/doc.ErrorModel"
+                        }
+                    },
+                    "400": {
+                        "description": "Erreur de validation",
+                        "schema": {
+                            "$ref": "#/definitions/doc.ErrorModel"
+                        }
+                    },
+                    "500": {
+                        "description": "Erreur d'authentification",
+                        "schema": {
+                            "$ref": "#/definitions/doc.ErrorModel"
+                        }
+                    }
+                }
+            }
+        },
         "/user/register": {
             "post": {
                 "description": "Création d’un nouvel utilisateur",
@@ -74,6 +120,22 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "auth.UserLoginDto": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 6
                 }
             }
         },
